..F....... [ZBXNEXT-4045] implemented maximum size for graphs in widgets (gcalenko)
A.F....... [ZBX-1357] enabled Hebrew translation to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), French, German, Hebrew, Japanese, Korean, Russian, Turkish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-13309] fixed displaying of Problem/Recovery time (agriscenko, ashubin, Sasha)
.......PS. [ZBX-13450] fixed server and proxy compilation problem for Solaris 10 (MVekslers)
A.F....... [ZBX-13458,ZBX-13494] fixed resolving of the macros in map labels for non-superadmin users (Sasha)
..F....... [ZBX-13526] fixed widget placeholder jumping instead of resizing while dashboard edit (ashubin)
.......PS. [ZBX-13362] fixed potentially wrong rows deleting by housekeeper in PostgreSQL (Sergejs)
..F....... [ZBX-13506] fixed linked trigger is moved to sibling map element (agriscenko)
........S. [ZBX-13586] fixed trigger-based event correlation - suspend creation of event if no problems are recovered by it (viktors, wiper)
........S. [ZBX-13339] improved deallocation of memory (MVekslers)
..F....... [ZBX-13340] fixed pie graphs displaying incorrect data (Ivo)
..F....... [ZBX-13412] fixed JS error and wrong form behaviour when changing item type, type of information, data type (agriscenko)
..F....... [ZBX-13257] fixed display of the latest item in Audit log (agriscenko)
..F....... [ZBX-13447] fixed trigger name readability on map in dark theme (nikita)
..F....... [ZBX-13360] fixed HTML5 placeholder color that previously appeared like actual input data (nikita)
...G...PS. [ZBX-13351] improved OpenSSL error messages (viktors)
..F....... [ZBX-13147] fixed inconsistent number on map navigation tree (nikita)
..F....... [ZBX-13537] fixed "Inaccessible user" in Dashboard System status widgets acknowledgement popup (agriscenko)