@@ -2047,7 +2047,7 @@ class CAction extends CApiService {
 
 			foreach ($ack_operations as $ack_operation) {
 				$actionid = $ack_operation['actionid'];
-				unset($ack_operation['actionid']);
+				unset($ack_operation['actionid'], $ack_operation['recovery']);
 				$result[$actionid]['acknowledgeOperations'][] = $ack_operation;
 			}
 		}
@@ -2083,6 +2083,8 @@ class CAction extends CApiService {
 			$opinventory = [];
 
 			foreach ($operations as $operationid => $operation) {
+				unset($operations[$operationid]['recovery']);
+
 				switch ($operation['operationtype']) {
 					case OPERATION_TYPE_MESSAGE:
 						$opmessage[] = $operationid;
@@ -2301,6 +2303,8 @@ class CAction extends CApiService {
 			$op_recovery_message = [];
 
 			foreach ($recovery_operations as $recovery_operationid => $recovery_operation) {
+				unset($recovery_operations[$recovery_operationid]['recovery']);
+
 				switch ($recovery_operation['operationtype']) {
 					case OPERATION_TYPE_MESSAGE:
 						$opmessage[] = $recovery_operationid;
@@ -2576,9 +2580,10 @@ class CAction extends CApiService {
 			}
 		}
 
-		$ack_operations = $this->unsetExtraFields($ack_operations, ['operationid', 'actionid' ,'operationtype'],
+		$ack_operations = $this->unsetExtraFields($ack_operations, ['operationid', 'operationtype'],
 			$ack_options
 		);
+
 		return $ack_operations;
 	}
 
